fix the html issue -  insite the label there was a h3 tag, fixed with a span

--- a/styles/style.css
+++ b/styles/style.css
@@ -276,24 +276,8 @@ body {
   display: block;
 }
 
-.question-group label.question:hover h3 {
+.question-group label.question:hover .title {
   color: #f47c57;
-}
-
-.question-group label.question h3 {
-  min-width: 10px;
-  margin: auto 10px auto 0;
-  color: #1d1e35;
-  padding: 15px 0;
-  font-weight: 400;
-  font-size: 15px;
-}
-
-@media (max-width: 1055px) {
-  .question-group label.question h3 {
-    margin: auto auto;
-    font-size: 14px;
-  }
 }
 
 .question-group label.question img {
@@ -302,7 +286,7 @@ body {
   grid-area: image;
 }
 
-.question-group label.question span {
+.question-group label.question .content {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
@@ -310,11 +294,27 @@ body {
   overflow: hidden;
 }
 
+label {
+  min-width: 10px;
+  margin: 5px auto auto 0;
+  color: #1d1e35;
+  padding: 15px 0;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+@media (max-width: 1055px) {
+  label {
+    margin: auto auto auto 0;
+    font-size: 14px;
+  }
+}
+
 input[type='radio'].questions {
   display: none;
 }
 
-input[type='radio'].questions:checked ~ span.content {
+input[type='radio'].questions:checked ~ .content {
   height: 100%;
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
@@ -331,12 +331,12 @@ input[type='radio'].questions:checked ~ span.content {
 }
 
 @media (max-width: 1055px) {
-  input[type='radio'].questions:checked ~ span.content {
+  input[type='radio'].questions:checked ~ .content {
     margin: 10px 25px 10px 0;
   }
 }
 
-input[type='radio'].questions:checked ~ label > h3 {
+input[type='radio'].questions:checked ~ label > span.title {
   color: #1d1e35;
   font-weight: 700;
 }
@@ -346,7 +346,7 @@ input[type='radio'].questions:checked ~ img {
           transform: rotate(180deg);
 }
 
-span.content {
+.content {
   -webkit-transform: translateY(-100px);
           transform: translateY(-100px);
   opacity: 0;
