fixed ipad responsive not being shown correctly

--- a/styles/style.css
+++ b/styles/style.css
@@ -174,7 +174,7 @@ body {
   .topBlockImage {
     display: inline;
     position: absolute;
-    width: 77%;
+    width: 78%;
     margin-top: 14.5%;
     top: 14px;
     right: 15%;
@@ -183,14 +183,28 @@ body {
 
 @media (min-width: 600px) and (max-width: 1055px) {
   .topBlockImage {
-    top: 50%;
     left: 50%;
     width: 240px;
     height: 172px;
-    margin-top: -188px;
+    margin-top: 135px;
     margin-left: -146px;
     -webkit-transform: scale(1.85);
             transform: scale(1.85);
+  }
+}
+
+@media only screen and (min-device-width: 670px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .topBlockImage {
+    top: 7%;
+    margin-top: 54px;
+    -webkit-transform: scale(1.75);
+            transform: scale(1.75);
+  }
+}
+
+@media (max-width: 320px) {
+  .topBlockImage {
+    margin-top: 11.5%;
   }
 }
 
